--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+  <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
 
