--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   <script src="https://d3js.org/d3.v5.min.js"></script>
   </head>
   <body>
-
+<script type="text/javascript" src="finalProject.js"></script>
   </body>
 </html>
