--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Election Data</title>
+    <h1>Election Data!</h1>
+    <h2>By Jackson Norris</h2>
   <script src="https://d3js.org/d3.v5.min.js"></script>
+  <link rel="stylesheet" href="finalProject.css">
   </head>
   <body>
-<script type="text/javascript" src="finalProject.js"></script>
+    <svg></svg>
+    <script type="text/javascript" src="finalProject.js"></script>
   </body>
 </html>
