--- a/index.html
+++ b/index.html
@@ -9,7 +9,28 @@
   <link rel="stylesheet" href="finalProject.css">
   </head>
   <body>
-    <svg></svg>
+    <h2 class='year'></h2>
+
+    <div class="myText">
+    </div>
+    <svg class='straightUp'></svg>
+    <br>
+    <button type="button" name="1976" class="year76">1976</button>
+    <button type="button" name="1980" class="year80">1980</button>
+    <button type="button" name="1984" class="year84">1984</button>
+    <button type="button" name="1988" class="year88">1988</button>
+    <button type="button" name="1992" class="year92">1992</button>
+    <button type="button" name="1996" class="year96">1996</button>
+    <button type="button" name="2000" class="year00">2000</button>
+    <button type="button" name="2004" class="year04">2004</button>
+    <button type="button" name="2008" class="year08">2008</button>
+    <button type="button" name="2012" class="year12">2012</button>
+    <button type="button" name="2016" class="year16">2016</button>
     <script type="text/javascript" src="finalProject.js"></script>
+
+<br>
+    <h2 class='republican'></h2>
+    <h2 class='democrat'></h2>
+    <svg class = 'scaling'></svg>
   </body>
 </html>
