--- a/index.html
+++ b/index.html
@@ -32,5 +32,6 @@
     <h2 class='republican'></h2>
     <h2 class='democrat'></h2>
     <svg class = 'scaling'></svg>
+    <svg class = 'popularVotes'></svg> 
   </body>
 </html>
