--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
   <head>
     <meta charset="utf-8">
     <title>Election Data</title>
-    <h1>Election Data!</h1>
+    <h1>Breaking Down Horserace Politics</h1>
     <h2>By Jackson Norris</h2>
   <script src="https://d3js.org/d3.v5.min.js"></script>
   <link rel="stylesheet" href="finalProject.css">
   </head>
   <body>
     <h2 class='year'></h2>
-
     <div class="myText">
     </div>
     <svg class='straightUp'></svg>
+
     <br>
     <button type="button" name="1976" class="year76">1976</button>
     <button type="button" name="1980" class="year80">1980</button>
@@ -32,6 +32,5 @@
     <h2 class='republican'></h2>
     <h2 class='democrat'></h2>
     <svg class = 'scaling'></svg>
-    <svg class = 'popularVotes'></svg> 
   </body>
 </html>
